# llm-programs

./: .gitignore  01-react.ipynb  02-reflexion.ipynb  03-self-consistency.ipynb  README.md  pyproject.toml  requirements.txt
01-react/: 01-react.ipynb
02-reflexion/: 02-reflexion.ipynb  pyproject.toml
03-self-consistency/: 03-self-consistency.ipynb
04-tree-of-thoughts/: 04-tree-of-thoughts.ipynb  pyproject.toml
