[project]
name = "llm-programs"
version = "0.0.0"
description = "Minimal project for llm-programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "numexpr>=2.14.1",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
]
