[project]
name = "llm-programs"
version = "0.0.0"
description = "Minimal project for llm-programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "llama-index>=0.12.52",
    "llama-index-experimental>=0.5.5",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-packs-tables>=0.3.1",
    "numexpr>=2.14.1",
    "pandas>=2.3.3",
    "ruff>=0.14.4",
    "shutup>=0.2.0",
    "sqlalchemy>=2.0.44",
    "tabulate>=0.9.0",
]
